--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,16 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div class="site-header">
+        <h1>Fazz Tools</h1>
+    </div>
     <div id="root"></div>
+    <div class="footer">
+        <hr/>
+        <footer>
+            <p>&copy; 2021</p>
+        </footer>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
