gear page finished with average ilvl column

--- a/public/index.html
+++ b/public/index.html
@@ -25,18 +25,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Fazz Tools</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="site-header">
-        <h1>Fazz Tools</h1>
-    </div>
     <div id="root"></div>
     <div class="footer">
         <hr/>
         <footer>
-            <p>&copy; 2021</p>
+            <p>@Fazz#1234 on Discord</p>
         </footer>
     </div>
     <!--
